--- a/posters/posters/2024-slice_summer-next_paradigm/index.jinja2
+++ b/posters/posters/2024-slice_summer-next_paradigm/index.jinja2
@@ -228,7 +228,7 @@
     </div>
     <div style="display: grid; align-contents: center;">
       <ul style="font-size: 0.9rem;">
-        <li class="fragment">Limited HW primitives (e.g., no XOR support)</li>
+        <li class="fragment">Limited HW primitives (e.g., Comb dialect doesn't have NOT support)</li>
         <li class="fragment">SSA style in memory representations needlessly complicates pass writing</li>
         <li class="fragment">No such concept of runtime interop (everything is lowered to RTL)</li>
         <li class="fragment">Although it supports cross-dialect interactions, it is used only for lowering in practice</li>
