--- a/talks/talks/2024_08-athlete-tidalsim_tracekit.jinja2
+++ b/talks/talks/2024_08-athlete-tidalsim_tracekit.jinja2
@@ -221,30 +221,48 @@ import 'highlight.js/styles/tokyo-night-dark.css'
           <li class="fragment">Insensitive to OS scheduling, stable thread contexts</li>
         </ul>
       </li>
-      <li class="fragment">Datacenter (nginx, Postgres, Redis, Gitlab)
+      <li class="fragment"><strong>Datacenter</strong> (nginx, Postgres, Redis, Gitlab)
         <ul>
           <li class="fragment">IO heavy</li>
-          <li class="fragment">Task-level parallelism, low ILP</li>
-          <li class="fragment">OS threads used for blocking IO (network, disk, database)</li>
+          <li class="fragment">Task-level parallelism, low ILP, inter-thread communication on task init/finish</li>
+          <li class="fragment">OS threads used for blocking IO (network, disk, database, RPC)</li>
           <li class="fragment">High concurrency, userspace threading (green threads), frequent context switches</li>
         </ul>
       </li>
     </ul>
+
+    <p class="fragment center">Accurate modeling of time is essential</p>
   </section>
 
   <section>
-    <h2 style="font-size:1.9rem;">Time Modeling in Sampled Simulation</h2>
+    <h2>Modeling Time in Sampled Simulation</h2>
+
+    <div class="center fragment">
+      <img width="80%" src="./figs/dynamic/tidalsim/timer_interrupts.svg" />
+    </div>
+
+    <!--<p class="center fragment">Consider timer interrupts: naive functional simulators will just advance one timestep per commited instruction, not matching RTL!</p>-->
+    <p class="center fragment">Live sampling (interleaving arch and uArch sim) is required to accurately model time-dependent behaviors.</p>
+  </section>
+
+  <section>
+    <h2>Prior Work in Multithreaded Sampling</h2>
 
     <ul class="smallish">
       <li class="fragment">Prior work runs uArch simulators in "syscall emulation" mode when evaluating workloads (e.g. SPEC), not modeling any OS-application interactions</li>
       <li class="fragment">Real workloads contain many interactions between processes and the OS which are sensitive to the modeling of time</li>
     </ul>
+    Mostly considers HPC style workloads.
+    Intervals bounded by task regions (Taskpoint), loops (LoopPoint), or barriers (BarrierPoint)
+    Accurate time modeling requires live sampling (see COTSON from HP Labs)
+  </section>
 
-    <div class="center fragment">
-      <img width="60%" src="./figs/dynamic/tidalsim/timer_interrupts.svg" />
-    </div>
+  <section>
+    Before trying to do live sampling with time modeling, let's figure out what sampling methodology is required to extrapolate performance (not considering injection related errors).
+  </section>
 
-    <p class="center fragment">Consider timer interrupts: naive functional simulators will just advance one timestep per commited instruction, not matching RTL!</p>
+  <section>
+    Trace-oriented sampling evaluation
   </section>
 
   <!--<section>
@@ -264,255 +282,15 @@ import 'highlight.js/styles/tokyo-night-dark.css'
 
 <section>
   <section class="center">
-    <h1>WIP: Detailed Error Analysis</h1>
-  </section>
-
-  <section>
-    <h2>Questions We Want to Answer</h2>
-
-    <ul>
-      <li class="fragment">How good would RTL sampled simulation be if we had perfect warmup?</li>
-      <li class="fragment">What is the breakdown of sampling vs detailed/functional warmup related errors?</li>
-      <li class="fragment">Can we predict the error of sampled simulation before running it?</li>
-    </ul>
-
-    <p class="fragment center"><strong>Let's build a methodology for answering these questions</strong></p>
-  </section>
-
-  <!--<section>
-    <h2>Sources of IPC Error</h2>
-
-    <ul>
-      <li class="fragment">Embedding error
-        <ul>
-          <li class="fragment">Error caused by representing one interval by a mix of sampled intervals</li>
-          <li class="fragment">Without sampling, there is no embedding error</li>
-        </ul>
-      </li>
-      <li class="fragment">Functional warmup errors
-        <ul>
-          <li class="fragment">Error that wouldn't be present had the functional warmup of specific long-lived state was perfect (matched the full RTL simulation)</li>
-          <li class="fragment">Each additional long-lived block that's warmed-up has the effect of:
-            <ol>
-              <li>Reducing error attributed to detailed warmup</li>
-              <li>Adding (usually a smaller) error attributed to functional warmup</li>
-            </ol>
-          </li>
-        </ul>
-      </li>
-      <li class="fragment">Detailed warmup error
-        <ol class="small">
-          <li>Bias caused by starting IPC measurement for an interval only after detailed warmup is complete</li>
-          <li>Error caused by difference of uArch state vs full RTL simulation (coupled to functional warmup)</li>
-        </ol>
-      </li>
-      <li class="fragment">Time modeling error
-
-      </li>
-      <li class="fragment">External model latent state errors
-
-      </li>
-    </ul>
-  </section>-->
-
-  <!--<section>
-    <h2>Error Analysis Methodology</h2>
-
-    <ul>
-      <li class="fragment">Simplifying assumptions
-        <ul>
-          <li class="fragment">Single-threaded workloads without time-related behaviors or I/O {{ rightarrow }} <strong>No time modeling error</strong></li>
-          <li class="fragment">External model latent state (DRAM MC model) contributes marginally to error {{ rightarrow }} <strong>No latent state errors</strong></li>
-          <li class="fragment">No sampling, every interval is simulated {{ rightarrow }} <strong>No embedding errors</strong></li>
-        </ul>
-      <li class="fragment">Remaining error sources
-        <ul>
-          <li class="fragment">Functional warmup mismatches versus the golden RTL simulation + breakdown of per-block warmup errors</li>
-          <li class="fragment">Detailed warmup errors from interval offset measurement bias</li>
-          <li class="fragment">Error from the impact of functional warmup error on detailed warmup error</li>
-        </ul>
-      </li>
-      <li class="fragment">How can we isolate each of these error sources?</li>
-    </ul>
-  </section>-->
-
-  <section>
-    <h2>Eliminating Sampling Errors</h2>
-
-    <div class="center">
-      <img class="fragment image no-margin" src="./figs/dynamic/tidalsim-error/pure_injection.svg" width="80%" />
-    </div>
-
-    <!--<ul class="smallish">
-      <li class="fragment">If we only inject every interval's architectural state into RTL simulation, then we get a worst case per-interval error</li>
-      <li class="fragment">This error doesn't contain any offset measurement bias</li>
-      <li class="fragment">On its own, this error is the <em>maximum</em> error possible per interval
-        <ul>
-          <li>Each extra thing we do (functional warmup, detailed warmup, warmup offset selection) serves to <em>reduce</em> this baseline error</li>
-          <li>The remaining error can be attributed to deficiencies in functional or detailed warmup + embedding error</li>
-        </ul>
-      </li>
-    </ul>-->
-    <ul>
-      <li class="fragment">Let's inject only arch state into RTL sim and simulate <em>each</em> interval</li>
-      <li class="fragment">This is the <em>worst case / maximum error</em> for that interval</li>
-      <li class="fragment">We can measure the <em>error reduction</em> of each thing we do (functional / detailed warmup)</li>
-      <li class="fragment">The remaining error can be <em>attributed to sampling</em></li>
-    </ul>
-  </section>
-
-  <section>
-    <h2>Evaluating Detailed Warmup Errors</h2>
-
-    <div class="center">
-      <img class="fragment image" src="./figs/dynamic/tidalsim-error/detailed_warmup.svg" width="80%" />
-    </div>
-
-    <ul>
-      <li class="fragment">Let's begin by seeing the impact of <em>only detailed warmup</em></li>
-      <li class="fragment">We can play with the <em>offset of injection</em> to evaluate its role too</li>
-      <!--<li class="fragment">We can first measure the impact of detailed warmup wrt the number of instructions and the offset (measurement bias)</li>
-      <li class="fragment">The <em>error differences</em> seen here are the errors mitigated by detailed warmup alone</li>-->
-    </ul>
-  </section>
-
-  <section>
-    <h2>Evaluating Functional Warmup Errors</h2>
-
-    <img class="fragment image" src="./figs/dynamic/tidalsim-error/functional_warmup.svg" width="100%" />
-
-    <ul>
-      <li class="fragment">Add functional warmup (using a model or a perfect oracle) to the mix</li>
-      <!--<li class="fragment">We can use a similar technique to measure the impact of functional warmup</li>
-      <li class="fragment">The final error model would also contain a term that describes the combined error reduction of functional and detailed warmup</li>-->
-    </ul>
-    <p class="center fragment"><strong>WIP: This methodology enables error analysis of sampling and warmup.</strong></p>
-  </section>
-
-  <section class="center">
-    <h2>Backup Slides</h2>
-  </section>
-
-  <section>
-    <h2>Evaluation - Detailed Warmup Alone</h2>
-
-    <p class="center small">For a given workload interval and a interval length $N$ (e.g. $N = 10000$) and <em>without</em> functional warmup, we can compute this table. <small>(each cell is IPC error wrt the full RTL simulation)</small></p>
-
-    <table class="detailed_warmup_table">
-      <thead>
-      <tr>
-        <th></th>
-        <th></th>
-        <th colspan="6">Detailed warmup instructions ($ n_{\text{warmup}} $)</th>
-      </tr>
-      <tr style="text-align: center;">
-        <th></th>
-        <th></th>
-        <th>0</th>
-        <th>100</th>
-        <th>500</th>
-        <th>1000</th>
-        <th>2000</th>
-        <th>5000</th>
-      </tr>
-      </thead>
-      <tbody>
-      <tr class="fragment">
-        <!-- style="writing-mode:sideways-lr; text-orientation: sideways;" -->
-        <th rowspan="6" style="vertical-align: middle;">Detailed warmup offset ($ n_{\text{offset}} $)</th>
-        <th>0</th>
-        <td class="bg-red">Worst case</td>
-        <td style="font-size: 80%">Offset error ↑<br />Warmup error ↓</td>
-        <td style="font-size: 80%">Offset error 2↑<br />Warmup error 2↓</td>
-        <td style="font-size: 80%">Offset error 3↑<br />Warmup error 3↓</td>
-        <td style="font-size: 80%">Offset error 4↑<br />Warmup error 4↓</td>
-        <td>Maximum offset error</td>
-      </tr>
-      <tr class="fragment">
-        <th>-100</th>
-        <td class="bg-grey">Invalid</td>
-        <td class="bg-yellow">No offset error</td>
-        <td>''</td>
-        <td>''</td>
-        <td>''</td>
-        <td>''</td>
-      </tr>
-      <tr class="fragment">
-        <th>-500</th>
-        <td class="bg-grey"></td>
-        <td class="bg-grey"></td>
-        <td class="bg-yellow">No offset error</td>
-        <td>''</td>
-        <td>''</td>
-        <td>''</td>
-      </tr>
-      <tr class="fragment">
-        <th>-1000</th>
-        <td class="bg-grey"></td>
-        <td class="bg-grey"></td>
-        <td class="bg-grey"></td>
-        <td class="bg-yellow">No offset error</td>
-        <td>''</td>
-        <td>''</td>
-      </tr>
-      <tr class="fragment">
-        <th>-2000</th>
-        <td class="bg-grey"></td>
-        <td class="bg-grey"></td>
-        <td class="bg-grey"></td>
-        <td class="bg-grey"></td>
-        <td class="bg-yellow">No offset error</td>
-        <td>''</td>
-      </tr>
-      <tr class="fragment">
-        <th>-5000</th>
-        <td class="bg-grey"></td>
-        <td class="bg-grey"></td>
-        <td class="bg-grey"></td>
-        <td class="bg-grey"></td>
-        <td class="bg-grey"></td>
-        <td class="bg-green">No offset error, best case</td>
-      </tr>
-      </tbody>
-    </table>
-  </section>
-
-  <section>
-    <h2>Detailed Warmup Error Model</h2>
-
-    <p class="fragment">Given the data in the table for every interval and for different interval lengths $N$, fit the following model:</p>
-
-    <div class="fragment">
-    \[\begin{aligned}
-      \left(\frac{1}{\text{error}}\right) &amp;= f(N, n_{\text{warmup}}, n_{\text{offset}}) \\
-      &amp;= \frac{1}{1 + e^{-(n_{\text{warmup}}/N - \mu) / s}} + \alpha \frac{n_{\text{warmup}} - n_{\text{offset}}}{N} + \beta N
-    \end{aligned} \]
-    </div>
-
-    <ul>
-      <li class="fragment">Logistic term to model error reduction from warmup</li>
-      <li class="fragment">Linear term to model error reduction from offset elimination</li>
-      <li class="fragment">Linear term to model relationship of interval length to IPC error</li>
-      <li class="fragment">There might also be a term that mixes $n_{\text{warmup}}$ and $n_{\text{offset}}$ (TBD)</li>
-    </ul>
-  </section>
-
-  <section>
-    <h2>Extending the Error Model</h2>
-
-    <ul>
-      <li class="fragment">Consider building more tables with different functional warmup types (L1i, L1d, L2, BP, combinations) and fidelity (perfect vs model)</li>
-      <li class="fragment">Still an open question: how can we mix the functional warmup type/fidelity into the error model?</li>
-      <li class="fragment">Given a particular sampled simulation configuration ($N$, $n_{\text{warmup}}$, $n_{\text{offset}}$, functional warmup type + fidelity) for a given workload
-        <ul>
-          <li>The remaining error from the table cell is <em>attributable to inaccurate warmup</em> (functional + detailed)</li>
-          <li>Any additional error seen in <em>actual</em> sampled simulation is <em>attributable to embedding</em></li>
-        </ul>
-      </li>
-    </ul>
+    <h1>Tracing @ Google</h1>
   </section>
 </section>
 
+<section>
+  <section class="center">
+    <h1>The TraceKit Framework</h1>
+  </section>
+</section>
 
 <section>
   <h2>Conclusion</h2>
